# app/Http/Controllers/ContactController.php
@@ -4,6 +4,10 @@ use Illuminate\Http\Request;
 use Illuminate\Http\JsonResponse;
 use Carbon\Carbon;
 use App\Models\Contact;
+use Mail;
+use App\Schemas\Berichten AS BerichtenResource;
+use Illuminate\Support\Facades\DB;
+
 
 class ContactController extends BaseController {
     // Store Contact Form data
@@ -33,5 +37,22 @@ class ContactController extends BaseController {
         return response()->json([
             'message'=> 1
         ]);
+
+         //  Send mail to admin
+         Mail::send('mail', array(
+            'name' => $request->get('name'),
+            'email' => $request->get('email'),
+            'phone' => $request->get('phone'),
+            'subject' => $request->get('subject'),
+            'message' => $request->get('message'),
+        ), function($message) use ($request){
+            $message->from($request->email);
+            $message->to('gbussel58@gmail.com', 'Admin')->subject($request->get('subject'));
+        });
+    }
+
+    public function latest()
+    {
+        return DB::table('contacts')->orderBy('created_at', 'desc')->get();
     }
 }
